--- a/package.json
+++ b/package.json
@@ -1,17 +1,52 @@
 {
   "dependencies": {
+    "apollo-client": "^0.4.20",
     "babel": "^6.5.2",
     "babel-core": "^6.17.0",
     "babel-loader": "^6.2.5",
+    "bourbon": "^4.2.7",
+    "bourbon-neat": "^1.8.0",
+    "classnames": "^2.2.5",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "graphql-tag": "^0.1.14",
+    "history": "^4.3.0",
     "node-sass": "^3.10.1",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
+    "react": "^15.3.2",
+    "react-apollo": "^0.5.8",
+    "react-dom": "^15.3.2",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.7.0",
+    "redux-simple-router": "^2.0.4",
     "sass-loader": "^4.0.2",
     "webpack": "^1.13.2"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.16.0"
+    "autoprefixer": "^6.5.0",
+    "babel-core": "^6.17.0",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-2": "^6.17.0",
+    "copy-webpack-plugin": "^3.0.1",
+    "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "imports-loader": "^0.6.5",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "postcss-loader": "^0.13.0",
+    "react-stdio": "^3.1.0",
+    "redux-thunk": "^2.1.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.2"
   }
 }
