--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "file-loader": "^0.9.0",
     "graphql-tag": "^0.1.14",
     "history": "^4.3.0",
+    "invariant": "^2.2.1",
+    "jwt-decode": "^2.1.0",
     "node-sass": "^3.10.1",
     "phoenix": "file:deps/phoenix",
     "phoenix_html": "file:deps/phoenix_html",
@@ -21,14 +23,16 @@
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "redux": "^3.6.0",
+    "redux-auth-wrapper": "^0.8.0",
     "redux-logger": "^2.7.0",
     "redux-simple-router": "^2.0.4",
-    "sass-loader": "^4.0.2",
-    "webpack": "^1.13.2"
+    "redux-thunk": "^2.1.0",
+    "sass-loader": "^4.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.0",
     "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.16.0",
@@ -37,6 +41,13 @@
     "babel-preset-stage-2": "^6.17.0",
     "copy-webpack-plugin": "^3.0.1",
     "css-loader": "^0.25.0",
+    "eslint": "^3.8.1",
+    "eslint-config-airbnb": "^12.0.0",
+    "eslint-friendly-formatter": "^2.0.6",
+    "eslint-loader": "^1.6.0",
+    "eslint-plugin-import": "^2.0.1",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
     "imports-loader": "^0.6.5",
